--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
 gunicorn = "*"
 dj-database-url = "*"
 whitenoise = "*"
 psycopg2 = "*"
+pillow = "*"
+django = "*"
+django-crispy-forms = "*"
 
 [dev-packages]
 
